# computer-agent-mcp

./: .gitignore  LICENSE  README.md  README_CN.md  REFERENCE.md  pyproject.toml
computer_agent_mcp/: __main__.py  config.py  debug.py  executor.py  keys.py  models.py  monitor.py  openai_adapter.py  platform.py  platform_base.py  platform_windows.py  prompts.py  response_parsing.py  runner.py  server.py
tests/: test_config.py  test_executor.py  test_monitor.py  test_platform_base.py  test_platform_windows.py  test_response_parsing.py  test_runner.py  test_server.py
